# libObfuscator

./: .gdb_history  .gitignore  CMakeLists.txt  Makefile  compile_commands.json  out  output.txt  test.c  test.ll
include/: CryptoUtils.h
src/: CryptoUtils.cpp  encrypt.c  obfuscator.cpp
tests/: encrypt.ll  linked.bc  linked.ll  test-opt.ll  test.c  test.ll
